Edit title of page and create list format for projects

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>emilwisch.github.io</h1>
+    <h1>Emil Wisch (emilwisch.github.io) Portfolio</h1>
     <h2>Projects</h2>
-    <a href="https://emilwisch.github.io/odin-recipes/index.html">Recipes Website (The Odin Project)</a>
+    <ul>
+        <li><a href="https://emilwisch.github.io/odin-recipes/index.html">Recipes Website (The Odin Project)</a></li>
+    </ul>
 </body>
 </html>
