--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Emil Wisch (emilwisch.github.io) Portfolio</h1>
+    <h1>Emil Wisch - Portfolio (emilwisch.github.io)</h1>
     <h2>Projects</h2>
     <ul>
         <li><a href="https://emilwisch.github.io/odin-recipes/index.html">Recipes Website (The Odin Project)</a></li>
