Add Landing Page link to index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
@@ -9,6 +10,7 @@
     <h1>Emil Wisch - Portfolio (emilwisch.github.io)</h1>
     <h2>Projects</h2>
     <ul>
+        <li><a href="https://emilwisch.github.io/landing-page/">Landing Page Project</a></li>
         <li><a href="https://emilwisch.github.io/odin-recipes/index.html">Recipes Website (The Odin Project)</a></li>
     </ul>
 </body>
